# echelon-receipts

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.6.3.md  RELEASE_NOTES_v2.6.4.md  eslint.config.mjs  m.txt  msg.txt  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-ffmpeg-mac.yml  build-macos.yml
docs/: communications-roadmap.md  reports-roadmap.md
scripts/: build_template.py  check-no-blocking-dialogs.mjs  download-ffmpeg.ps1  download-ffmpeg.sh  make-graduation-template.py  setup-libheif-mac.sh  setup-libheif-windows.ps1
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_pdf_folder.sql  003_email.sql  004_annual_receipts.sql  005_subsidies.sql  006_void_audit.sql  007_issuer_snapshot.sql  008_staff.sql  009_staff_credentials.sql  010_child_attendance.sql  011_no_lunch.sql  012_graduation_renders.sql
src-tauri/resources/: NOTICE.txt
src-tauri/resources/music/: CREDITS.txt
src-tauri/resources/templates/: graduation-template.pptx
src-tauri/src/: ask_echelon.rs  auth.rs  azure_ai.rs  azure_url_guard.rs  backup_crypto.rs  consensus.rs  consensus_v2.rs  db_gate.rs  db_migration.rs  device_secret.rs  documents.rs  email.rs  errlog.rs  gemini.rs  graduation.rs  inbox.rs  kid_sheet_ocr.rs  lib.rs  main.rs  migration_heal.rs  path_guard.rs  preprocess.rs  printing.rs  restore.rs  secrets.rs  security.rs  voice.rs  waitlist.rs
src-tauri/src/graduation/: commands.rs  concat.rs  curate.rs  engine.rs  heic.rs  paths.rs  pptx.rs  preflight.rs  progress.rs
src/components/: AlertDot.tsx  AppGate.tsx  ClosureImpactDialog.tsx  HealthCheck.tsx  HolidaysSettingsSection.tsx  LockButton.tsx  NotificationBell.tsx  NotificationsSettingsSection.tsx  OcrProgressBanner.tsx  PromptHost.tsx  RowMenu.tsx  SecuritySettingsSection.tsx  SettingsFab.tsx  TodayCard.tsx  TodayDrawer.tsx  VoiceCaptureModal.tsx
src/hooks/: useHomeAlerts.tsx
src/lib/: aging.ts  agmMinutes.ts  ai.ts  aiDraft.ts  annualReceipt.ts  askEchelon.ts  attendance.ts  attendanceAiAudit.ts  attendanceBucket.test.ts  attendanceBucket.ts  bcHolidays.ts  centreCalendar.test.ts  centreCalendar.ts  cloudBackup.ts  comms.ts  credentials.ts  db.ts  defaults.ts  depositSlip.ts  dialogs.ts  email.ts  emailRecovery.ts  errorLog.ts  excelImport.ts  expenses.ts  fiscalYear.ts  gemini.ts  homeAlerts.ts  html.ts  inactiveLabel.ts  lazy.ts  meetings.ts  monthAttendance.ts  ocr.ts  pdfPreview.ts  print.ts  receipt.ts  reportsFolder.ts  shiftEventPhrase.ts  staff.ts  (+10 more)
src/lib/notifications/: format.ts  scanners.ts  scheduler.test.ts  scheduler.ts
src/repo/: documentsRepo.ts  followupsRepo.ts  ids.test.ts  ids.ts  meetingsRepo.ts  notesRepo.ts  notificationsRepo.ts  organizerRepo.ts  scheduleRepo.test.ts  scheduleRepo.ts
src/screens/: AgingReport.tsx  AnnualReceipts.tsx  AskEchelon.tsx  Attendance.tsx  Deposits.tsx  Graduation.tsx  History.tsx  Home.tsx  MonthlyAttendance.tsx  NewReceipt.tsx  Notifications.tsx  Reports.tsx  Settings.tsx  Staff.tsx  StaffCredentials.tsx  StaffDrills.tsx  Students.tsx  ThisMonth.tsx  Today.tsx
src/screens/comms/: Compose.tsx  Directory.tsx  History.tsx  Scheduled.tsx  Templates.tsx
src/screens/expenses/: Dashboard.tsx  ExpenseAiTextPanel.tsx  ExpenseForm.tsx  ExpenseList.tsx  ImportStatement.tsx  Recurring.tsx  RecurringAiTextPanel.tsx  Reports.tsx
src/screens/organizer/: MeetingDrawer.tsx  Notes.tsx  Organizer.tsx  OrganizerAiTextPanel.tsx
src/screens/organizer/calendar/: AgendaPanel.tsx  Calendar.tsx  MonthView.tsx  event.ts
src/screens/reports/: Agm.tsx  AgmMinutes.tsx  AttendanceSummary.tsx  CredentialsCompliance.tsx  DrillLog.tsx  EnrollmentRoster.tsx  Overview.tsx  Subsidy.tsx
src/screens/staff/: MeetingNotesAiTextPanel.tsx  Meetings.tsx  Schedule.tsx  ScheduleAiTextPanel.tsx  ScheduleAudit.tsx  ScheduleConfirmations.tsx  ScheduleSubNav.tsx  ShiftDrawer.tsx
src/screens/vault/: DetailDrawer.tsx  Library.tsx  UploadModal.tsx
src/screens/waitlist/: Archived.tsx  DetailDrawer.tsx  Enrolled.tsx  List.tsx  Overview.tsx  Settings.tsx
