[package]
name = "echelon-receipts"
version = "1.0.3"
description = "Echelon Daycare receipt generator"
authors = ["Echelon Daycare Society"]
edition = "2021"

[lib]
name = "echelon_receipts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "hostname", "pool", "tokio1-rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rqrr = "0.7"
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
futures = "0.3"
sqlparser = "0.52"
rusqlite = { version = "0.32", features = ["bundled"] }
jsonwebtoken = "9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

