[package]
name = "echelon-receipts"
version = "2.4.1"
description = "Echelon Daycare receipt generator"
authors = ["Echelon Daycare Society"]
edition = "2021"

[lib]
name = "echelon_receipts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["sqlcipher"]
# Enables SQLCipher-backed encrypted-DB paths in db_gate::open_encrypted.
# Turned on by default; disabling would require also switching the rusqlite
# feature from bundled-sqlcipher-vendored-openssl back to bundled.
sqlcipher = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# C-4: the "devtools" Cargo feature *force-enables* the WebView inspector even
# in release builds. Debug builds (`cargo tauri dev`) already get devtools
# for free without this feature — only omit it here to keep release builds
# from shipping an always-on inspector.
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "hostname", "pool", "tokio1-rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rqrr = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
futures = "0.3"
sqlparser = "0.52"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
jsonwebtoken = "9"
dirs = "6.0.0"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2"
chacha20poly1305 = "0.11.0"
argon2 = "0.5.3"
sha2 = "0.11.0"
rand = "0.8"
url = "2.5"
subtle = "2.5"
libheif-rs = "2.2"
quick-xml = "0.36"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

